--- a/package.json
+++ b/package.json
@@ -8,17 +8,24 @@
     "dev": "run-p \"dev:*\"",
     "dev:css": "npm run generate:css -- --watch",
     "dev:remix": "remix dev",
-    "generate:css": "npx tailwindcss -i ./styles/tailwind.css -o ./app/tailwind.css",
+    "generate:css": "npx tailwindcss -i ./app/styles/tailwind.css -o ./app/tailwind.css",
     "start": "remix-serve build"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.6",
     "@netlify/functions": "^1.0.0",
     "@remix-run/netlify": "^1.6.5",
     "@remix-run/node": "^1.6.5",
     "@remix-run/react": "^1.6.5",
+    "axios": "^0.27.2",
     "cross-env": "^7.0.3",
+    "date-fns": "^2.28.0",
+    "framer-motion": "^6.5.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.4.0",
+    "sass": "^1.53.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.6.5",
