--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.27.2",
     "cross-env": "^7.0.3",
     "date-fns": "^2.28.0",
+    "firebase": "^9.9.0",
     "framer-motion": "^6.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
