--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,10 @@
     "strict": true,
     "allowJs": true,
     "forceConsistentCasingInFileNames": true,
+    "typeRoots": [
+      "./node_modules/@types",
+      "./@types"
+    ],
     "baseUrl": ".",
     "paths": {
       "~/*": [
