firebase-admin issues

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,9 @@
       "@components/*": [
         "app/components/*"
       ],
+      "@controllers/*": [
+        "app/controllers/*"
+      ],
       "@styles/*": [
         "app/styles/*"
       ],
