--- a/package.json
+++ b/package.json
@@ -20,12 +20,11 @@
     "axios": "^0.27.2",
     "cross-env": "^7.0.3",
     "date-fns": "^2.28.0",
-    "firebase": "^9.9.0",
+    "firebase-admin": "^11.0.0",
     "framer-motion": "^6.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
-    "sass": "^1.53.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
