--- a/package.json
+++ b/package.json
@@ -9,16 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.6",
+    "@tailwindcss/forms": "^0.5.2",
+    "axios": "^0.27.2",
+    "date-fns": "^2.28.0",
+    "firebase-admin": "^11.0.0",
+    "framer-motion": "^6.5.1",
     "next": "12.2.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "sass": "^1.53.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "18.0.6",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.7",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.2",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.6",
     "typescript": "4.7.4"
   }
 }
