--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.6.6",
     "@tailwindcss/forms": "^0.5.2",
+    "@tanstack/react-query": "^4.0.5",
     "@tanstack/react-table": "8.0.0-beta.5",
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
