--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "framer-motion": "^6.5.1",
     "next": "12.2.2",
     "react": "18.2.0",
+    "react-csv": "^2.2.2",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.33.1",
     "react-icons": "^4.4.0",
     "sass": "^1.53.0",
     "uuid": "^8.3.2"
