--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-hook-form": "^7.33.1",
     "react-icons": "^4.4.0",
     "sass": "^1.53.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "zod": "^3.17.10"
   },
   "devDependencies": {
     "@types/node": "18.0.6",
