--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "12.2.2",
     "react": "18.2.0",
     "react-csv": "^2.2.2",
+    "react-customizable-progressbar": "^1.1.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.33.1",
     "react-icons": "^4.4.0",
